@@ -4,6 +4,7 @@
   - rework of template inheritance
   - speed and size optimizations
   - bugfix under HHVM temporary cache file must only be created when caches template was updated
+  - fix compiled code for new {block} assign attribute
 
  18.09.2015
   - bugfix {if $foo instanceof $bar} failed to compile if 2nd value is a variable https://github.com/smarty-php/smarty/issues/92
